--- a/src/app/task/task-header/task-header.component.html
+++ b/src/app/task/task-header/task-header.component.html
@@ -4,10 +4,11 @@
   </div>
 
   <div class="fill">
-    <button>
-      <md-icon>add_circle-outline</md-icon>
+    <button md-icon-button>
+      <md-icon>add_circle_outline</md-icon> 
       <span>新任务</span>
     </button>
+    
   </div>
 
   <div>
