--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -1,6 +1,6 @@
 <div class="tasklists">
   <app-task-list *ngFor="let list of lists">
-    <app-task-header></app-task-header>
+    <app-task-header [header]="list.name" ></app-task-header>
     <app-task-item class="list-container" *ngFor="let task of list.tasks">
 
     </app-task-item>
