--- a/src/app/task/task-header/task-header.component.html
+++ b/src/app/task/task-header/task-header.component.html
@@ -24,7 +24,7 @@
   </button>
 
   <button md-menu-item>
-    <md-icon [svgIcon]="'move'"></md-icon>
+    <md-icon [svgIcon]="'move'"style="line-height:1;"></md-icon>
     <span>移动本列表所有内容</span>
   </button>
 
