--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -1,9 +1,9 @@
 <div class="tasklists">
   <app-task-list *ngFor="let list of lists">
-    <app-task-header [header]="list.name" ></app-task-header>
-    <app-task-item class="list-container" *ngFor="let task of list.tasks">
 
-    </app-task-item>
+    <app-task-header [header]="list.name"></app-task-header>
+    <app-task-item class="list-container" *ngFor="let task of list.tasks" [item]="task"> </app-task-item>
+
   </app-task-list>
 </div>
 <button md-fab type="button" (click)="openNewProjectDialog()" class="fab-button">
