--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -5,13 +5,13 @@
     </md-card-header>
     <md-card-content>
       <md-input-container hintLabel="必填项" class="full-width">
-        <input mdInput type="test" placeholder="您的email">
+        <input mdInput type="text" placeholder="您的email">
       </md-input-container>
       <md-input-container hintLabel="必填项" class="full-width">
-        <input mdInput type="test" placeholder="密码">
+        <input mdInput type="text" placeholder="密码">
       </md-input-container>
       <md-input-container hintLabel="必填项" class="full-width">
-        <input mdInput type="test" placeholder="重复输入您的密码">
+        <input mdInput type="text" placeholder="重复输入您的密码">
       </md-input-container>
 
       <md-grid-list cols="8" rowHeight="1:1">
