--- a/src/app/project/project-item/project-item.component.html
+++ b/src/app/project/project-item/project-item.component.html
@@ -8,17 +8,17 @@
   </md-card-content>
 
   <md-card-actions class="text-right">
-    <button md-button type="button">
+    <button md-button type="button" (click)="toDo('edit')">
       <md-icon>note</md-icon>
       <span>编辑</span>
     </button>
 
-    <button md-button type="button"(click)="toInvite()">
+    <button md-button type="button" (click)="toDo('invite')">
       <md-icon>group_add</md-icon>
       <span>邀请</span>
     </button>
 
-    <button md-button type="button">
+    <button md-button type="button"(click)="toDo('delete')">
       <md-icon>delete</md-icon>
       <span>删除</span>
     </button>
