--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <md-nav-list>
   <h3 md-subheader>项目</h3>
-  <md-list-item (click)="openSidebar()">
+  <md-list-item (click)="toTask()">
     <md-icon svgIcon="projects" md-list-icon></md-icon>
     <span md-line>项目首页</span>
     <span md-line md-subheader>查看您的所有项目</span>
