--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -5,10 +5,10 @@
     </md-card-header>
     <md-card-content>
       <md-input-container hintLabel="必填项" class="full-width">
-        <input mdInput type="test" placeholder="您的email">
+        <input mdInput type="text" placeholder="您的email">
       </md-input-container>
       <md-input-container hintLabel="必填项" class="full-width">
-        <input mdInput type="test" placeholder="密码">
+        <input mdInput type="text" placeholder="密码">
       </md-input-container>
       <button md-raised-button type="button" (click)="login()">登录</button>
     </md-card-content>
