--- a/src/app/project/invite/invite.component.html
+++ b/src/app/project/invite/invite.component.html
@@ -2,13 +2,13 @@
   <h2 md-dialog-title>邀请组员</h2>
   <div md-dialog-content>
     <md-input-container class="full-width">
-      <input mdInput type="test" placeholder="组员姓名" [mdAutocomplete]="autoMembers">
+      <input mdInput type="text" placeholder="组员姓名" [mdAutocomplete]="autoMembers">
     </md-input-container>
 
   </div>
   <div md-dialog-actions>
-    <button md-raised-button type="button" color="primary" (click)="save()">保存</button>
-    <button md-button md-dialog-close type="button">关闭</button>
+    <button md-raised-button type="button" color="primary" (click)="save('save')">保存</button>
+    <button md-button (click)="save()" type="button">关闭</button>
   </div>
 </form>
 <md-autocomplete #autoMembers='mdAutocomplete' [displayWith]="displayUser">
