--- a/src/app/project/new-project/new-project.component.html
+++ b/src/app/project/new-project/new-project.component.html
@@ -1,15 +1,15 @@
 <form>
-  <h2 md-dialog-title>新建项目</h2>
+  <h2 md-dialog-title>{{title}}</h2>
   <div md-dialog-content>
     <md-input-container  class="full-width">
-      <input mdInput type="test" placeholder="项目名称">
+      <input mdInput type="text" placeholder="项目名称">
     </md-input-container>
     <md-input-container  class="full-width">
-      <input mdInput type="test" placeholder="项目描述">
+      <input mdInput type="text" placeholder="项目描述">
     </md-input-container>
   </div>
   <div md-dialog-actions>
-    <button md-raised-button type="button" color="primary" (click)="save()">保存</button>
-    <button md-button md-dialog-close type="button">关闭</button>
+    <button md-raised-button type="button" color="primary" (click)="save('save')">保存</button>
+    <button md-button (click)="save()" type="button">关闭</button>
   </div>
 </form>
