--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -1,11 +1,17 @@
 <div class="tasklists">
-  <app-task-list *ngFor="let list of lists">
-
-    <app-task-header [header]="list.name"></app-task-header>
-    <app-task-item class="list-container" *ngFor="let task of list.tasks" [item]="task"> </app-task-item>
-
+  <app-task-list *ngFor="let list of lists" style="padding:0 0 0 3px;">
+    <app-task-header [header]="list.name"
+     (newTask)="onNewTask()"
+     (moveAll)="onMoveAll($event)"
+     (headerDelete)="headerDelete()"
+     
+     ></app-task-header>
+    <app-task-item class="list-container" 
+    *ngFor="let task of list.tasks" 
+    [item]="task"
+    (itemClick)="onItemClick(task)"> </app-task-item>
   </app-task-list>
 </div>
-<button md-fab type="button" (click)="openNewProjectDialog()" class="fab-button">
+<button md-fab type="button" (click)="newTaskList()" class="fab-button">
   <md-icon>add</md-icon>
 </button>
