--- a/src/app/task/task-header/task-header.component.html
+++ b/src/app/task/task-header/task-header.component.html
@@ -18,7 +18,7 @@
   </div>
 </div>
 <md-menu #menu="mdMenu">
-  <button md-menu-item>
+  <button md-menu-item (click)="changeListNames()">
     <md-icon>mode_edit</md-icon>
     <span>修改列表名称</span>
   </button>
