--- a/src/app/task/new-task/new-task.component.html
+++ b/src/app/task/new-task/new-task.component.html
@@ -23,7 +23,7 @@
     <md-datepicker #reminderDatepicker></md-datepicker>
   </div>
   <div md-dialog-actions>
-    <button md-raised-button type="button" color="primary" (click)="save()">保存</button>
-    <button md-button (click)="close()" type="button">关闭</button>
+    <button md-raised-button type="button" color="primary" (click)="save('save')">保存</button>
+    <button md-button (click)="save()" type="button">关闭</button>
   </div>
 </form>
