--- a/src/app/task/task-item/task-item.component.html
+++ b/src/app/task/task-item/task-item.component.html
@@ -2,10 +2,8 @@
   'one':item.priority==3,
   'two':item.priority==2,
   'three':item.priority==1
-  }" (click)="onItemClick()">
-  <md-checkbox style="order: -1;margin-right:5px;"
-  [checked]="item.completed" 
-  (click)="checkboxClick($event,item)"></md-checkbox>
+  }" (click)="onItemClick()" [@item]='widerPriority'>
+  <md-checkbox style="order: -1;margin-right:5px;" [checked]="item.completed" (click)="checkboxClick($event,item)"></md-checkbox>
   <div md-line [ngClass]="{'selected':item.completed}">
     <span [md-tooltip]="item.desc">{{item.desc}}</span>
   </div>
