--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,8 +1,8 @@
-<app-project-item *ngFor="let project of projects" 
-(inviteOutput)="toInvite()" 
-(toDelete)="toDelete()" 
-[item]="project" class="card" (editClick)="editClick()">
-</app-project-item>
+<div [@staggerAnim]='projects.length'class="itemDiv">
+  <app-project-item *ngFor="let project of projects" (inviteOutput)="toInvite()" (toDelete)="toDelete()" [item]="project" 
+    (editClick)="editClick()"class="card">
+  </app-project-item>
+</div>
 
 <button md-fab type="button" (click)="openNewProjectDialog()" class="fab-button">
   <md-icon>add</md-icon>
