--- a/src/app/task/task-item/task-item.component.html
+++ b/src/app/task/task-item/task-item.component.html
@@ -2,7 +2,12 @@
   'one':item.priority==3,
   'two':item.priority==2,
   'three':item.priority==1
-  }" (click)="onItemClick()" [@item]='widerPriority'>
+  }" (click)="onItemClick()" 
+  [@item]='widerPriority'
+  [app-draggable]='true'
+  [dragTag]="'task-item'"
+  [dragData]="item"
+  [draggedClass]="'drag-start'">
   <md-checkbox style="order: -1;margin-right:5px;" [checked]="item.completed" (click)="checkboxClick($event,item)"></md-checkbox>
   <div md-line [ngClass]="{'selected':item.completed}">
     <span [md-tooltip]="item.desc">{{item.desc}}</span>
