--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -3,9 +3,11 @@
   app-droppable
   [dropTags]="['task-item','task-list']"
   [dragEnterClass]="'drag-enter'"
+  [app-draggable]='true'
   [dragTag]="'task-list'"
   [draggedClass]="'drag-start'"
   [dragData]="list"
+  
   (dropped)="handleMove($event,list)"
   style="padding:0 0 0 3px;">
     <app-task-header [header]="list.name"
