--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -11,8 +11,7 @@
         <input mdInput type="text" placeholder="密码" formControlName="password">
       </md-input-container>
       <hr>
-      <button md-raised-button type="button" color="primary"
-       [disabled]="!form.valid" (click)="login()">登录</button>
+      <button md-raised-button type="button" color="primary" [disabled]="!form.valid" (click)="login()">登录</button>
     </md-card-content>
     <md-card-actions class="text-right">
       <p>还没有账户吗？
@@ -27,12 +26,12 @@
   <md-card>
     <md-card-header>
       <md-card-title>每日佳句</md-card-title>
-      <md-card-subtitle>爱的发生的发生的发生的发生的发的</md-card-subtitle>
+      <md-card-subtitle>{{quote.cn}}</md-card-subtitle>
     </md-card-header>
-    <img md-card-image [src]="loginImage">
+    <img md-card-image [src]="quote.pic">
     <md-card-content>
       <span>
-        asdfasdfasdfasdfasdfasdfasdfasdfas阿斯顿发生的发生的啊时代发生地方
+        {{quote.en}}
       </span>
     </md-card-content>
   </md-card>
