--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -1,6 +1,6 @@
 md-card {
-  height: 22em;
-  flex:0 0 20em;
+  height: 25em;
+  flex:0 0 21em;
 }
 
 form {
@@ -20,4 +20,7 @@ form {
 }
 hr{
   border:1px solid rgba(217, 243, 176, 0.1);
+}
+img{
+  height:13em;
 }
