--- a/src/app/shared/age-input/age-input.component.html
+++ b/src/app/shared/age-input/age-input.component.html
@@ -14,7 +14,7 @@
       </md-input-container>
     </div>
     <div>
-      <md-button-toggle-group formControlName="ageUnit">
+      <md-button-toggle-group formControlName="ageUnit" [(ngModel)]="selectecUnit">
         <md-button-toggle *ngFor="let unit of ageUnits" [value]="unit.value">
           {{unit.label}}
         </md-button-toggle>
