--- a/src/app/project/project-item/project-item.component.html
+++ b/src/app/project/project-item/project-item.component.html
@@ -2,7 +2,13 @@
   <md-card-header>
     <md-card-title>{{item.name}}</md-card-title>
   </md-card-header>
-  <img md-card-image [src]="item.coverImg" alt="项目封面">
+  <div md-card-image *ngIf="imgType else imSelect">
+    <md-icon  [svgIcon]="item.coverImg"style="width:100%;height: 197px;"></md-icon>
+  </div>
+  <ng-template #imSelect>
+    <img [src]="item.coverImg" alt="项目封面" md-card-image>
+  </ng-template>
+
   <md-card-content>
     {{item.desc}}
   </md-card-content>
@@ -18,7 +24,7 @@
       <span>邀请</span>
     </button>
 
-    <button md-button type="button"(click)="toDo('delete')">
+    <button md-button type="button" (click)="toDo('delete')">
       <md-icon>delete</md-icon>
       <span>删除</span>
     </button>
