--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,10 +1,10 @@
+<div [@staggerAnim]='projects' class="itemDiv">
+  <app-project-item *ngFor="let project of projects" (inviteOutput)="toInvite()" (toDelete)="toDelete(project)" [item]="project"
+   (editClick)="editClick(project)"
+    class="card">
+  </app-project-item>
+</div>
 
-  <div [@staggerAnim]='projects'class="itemDiv">
-    <app-project-item *ngFor="let project of projects" (inviteOutput)="toInvite()" (toDelete)="toDelete()" [item]="project" 
-      (editClick)="editClick()"class="card">
-    </app-project-item>
-  </div>
-
-<button md-fab type="button" (click)="openNewProjectDialog()" class="fab-button">
+<button md-fab type="button" (click)="editClick()" class="fab-button">
   <md-icon>add</md-icon>
 </button>
