--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -1,34 +1,32 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
   <md-card>
-    <md-card-header>
-      <md-card-title>注册：</md-card-title>
-    </md-card-header>
-    <md-card-content>
-      <md-input-container class="full-width">
-        <input mdInput type="text" placeholder="您的email" formControlName="email">
-      </md-input-container>
-      <md-input-container class="full-width">
-        <input mdInput type="text" placeholder="您的姓名" formControlName="name">
-      </md-input-container>
-      <md-input-container class="full-width">
-        <input mdInput type="text" placeholder="密码" formControlName="password">
-      </md-input-container>
-      <md-input-container class="full-width">
-        <input mdInput type="text" placeholder="重复输入您的密码" formControlName="surePassword">
-      </md-input-container>
+    <md-tab-group [dynamicHeight]="true" [selectedIndex]="selectedTab" (selectChange)="onTabChange($event.index)">
+      <md-tab label="帐号信息">
 
-      <app-age-input formControlName="dateOfBirth"></app-age-input>
-      
-      <app-image-list
-      [items]="items"
-      [title]="title"
-      [cols]="cols"
-      [useSvgIcon]="useSvgIcon"
-      (changeImage)="ischangeImage($event)"
-      formControlName="avater"
-      ></app-image-list>
-      <button md-raised-button type="submit"color="primary">注册</button>
-      <button md-raised-button type="button" (click)="historyBack($event)">返回</button>
-    </md-card-content>
+        <md-input-container class="full-width">
+          <input mdInput type="text" placeholder="您的email" formControlName="email">
+        </md-input-container>
+        <md-input-container class="full-width">
+          <input mdInput type="text" placeholder="您的姓名" formControlName="name">
+        </md-input-container>
+        <md-input-container class="full-width">
+          <input mdInput type="text" placeholder="密码" formControlName="password">
+        </md-input-container>
+        <md-input-container class="full-width">
+          <input mdInput type="text" placeholder="重复输入您的密码" formControlName="surePassword">
+        </md-input-container>
+
+        <app-age-input formControlName="dateOfBirth"></app-age-input>
+
+        <app-image-list [items]="items" [title]="title" [cols]="cols" [useSvgIcon]="useSvgIcon" (changeImage)="ischangeImage($event)"
+          formControlName="avater"></app-image-list>
+        <button md-raised-button type="submit" color="primary">注册</button>
+        <button md-raised-button type="button" (click)="historyBack($event)">返回</button>
+
+      </md-tab>
+      <md-tab label="个人信息">
+        wertwert
+      </md-tab>
+    </md-tab-group>
   </md-card>
 </form>
