--- a/src/app/project/invite/invite.component.html
+++ b/src/app/project/invite/invite.component.html
@@ -1,18 +1,11 @@
-<form>
+<form #f="ngForm">
   <h2 md-dialog-title>邀请组员</h2>
   <div md-dialog-content>
-    <md-input-container class="full-width">
-      <input mdInput type="text" placeholder="组员姓名" [mdAutocomplete]="autoMembers">
-    </md-input-container>
-
+    <app-chips-list [label]="'邀请成员'" name="members"
+     [(ngModel)]="members"></app-chips-list>
   </div>
   <div md-dialog-actions>
-    <button md-raised-button type="button" color="primary" (click)="save('save')">保存</button>
-    <button md-button (click)="save()" type="button">关闭</button>
+    <button md-raised-button type="button" color="primary" [disabled]="!f.valid"(click)="save('save',$event)">保存</button>
+    <button md-button (click)="save('',$event)" type="button">关闭</button>
   </div>
 </form>
-<md-autocomplete #autoMembers='mdAutocomplete' [displayWith]="displayUser">
-  <md-option *ngFor="let item of items" [value]="item">
-    {{item.name}}
-  </md-option>
-</md-autocomplete>
