--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -18,7 +18,7 @@
         <a href="" routerLink="register">注册</a>
       </p>
       <p>忘记密码？
-        <a href="" routerLink="forget">找回</a>
+        <a href="" routerLink="register">找回</a>
       </p>
     </md-card-actions>
   </md-card>
