--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit(form,$event)">
+<form [formGroup]="form">
   <md-card>
     <md-card-header>
       <md-card-title>登录：</md-card-title>
