--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -36,6 +36,8 @@
           <app-area-list formControlName="address"></app-area-list>
         </div>
         <button md-raised-button type="button" (click)="selectedTabClick()">上一页</button>
+
+        <button md-raised-button type="button" (click)="fasdf()"> console.log(this.form.value)</button>
       </md-tab>
     </md-tab-group>
   </md-card>
